refactor: 백엔드 Clean Code 7 Wave 적용 (48파일) + Spotless 자동 포맷팅